@@ -28,6 +28,8 @@
 
 * Fixed bug which meant that dynamic CompoundNumericPlugs would fail to restore their connections upon script load.
 
+* Arnold shaders may now be connected together to form networks, and they may have non-shader inputs (such as the Random node) which can be evaluated on a per-object basis to provide additional variation.
+
 0.35.6
 ------
 
